2002-06-25 Sebastian Stein <kbruch@hpfsc.de>

	* added tool tips to all important widgets

2002-05-30 Sebastian Stein <kbruch@hpfsc.de>

	* renamed the project to KBruch

	* ported the program to KDE3/Qt3

2002-05-02 Sebastian Stein <kbruch@hpfsc.de>

	* the statistic window is positionated next to the task window

	* removed English translation of the GUI

	* renamed the project to KBruch

	* version 0.19

2002-04-16 Sebastian Stein <bruch@hpfsc.de>

	* ported it to KDE 2

	* added internationalization support 

	* translated the German version

	* added a English translation to retake all strings from the program

	* version 0.18


2002-03-16 Sebastian Stein <bruch@hpfsc.de>

	* first version of the answer and result window (finished in most cases)

	* added the parameter window (with support of dynamic main denominator size)

	* moved the high() function to tool.h

	* added a statistic window

	* maybe fixed the floating point exception

	* version 0.17


2002-01-30 Sebastian Stein <bruch@hpfsc.de>

	* fixed autoconf/automake for Qt support (thanks to Kevin Krammer)

	* tried to stabilize the primzahl class

	* coded a better solution for the "press enter for 2 times to go on" messages

	* version 0.16

2002-01-29 Sebastian Stein <bruch@hpfsc.de>

	* added autoconf/automake for Qt support

	* fixed a small bug in bruch.cpp to count correct entered results

	* added the lsm software map

	* added -t and --text to call the text mode user interface

	* started to build the Qt GUI

	* version 0.15

2002-01-25 Sebastian Stein <bruch@hpfsc.de>

	* some finetuning to the text GUI

	* version 0.13 was tested on RedHat 7.1, SuSe Linux 7.2, Slackware Linux 8
	  SunOS 5.7, FreeBSD 4.4, AIX Unix, MS Windows 2000

	* added a check to autoconf/automake for gcc, so it compiles with -Wall

	* version 0.14

2002-01-24 Sebastian Stein <bruch@hpfsc.de>

	* some finetuning to the task generating

	* added command line options (?, h, help, v, version, d, debug)
